feat(identity): change identity store type to match with api
