# src/libs/api/models/index.ts
@@ -3,12 +3,15 @@
  * Do not edit manually.
  */
 
+export * from './authenticateUserDto';
+export * from './authenticateUserDtoRiot';
+export * from './authenticateUserDtoToken';
+export * from './authenticateUserDtoUser';
 export * from './authenticationExchangeCodeBadRequestResponseDto';
 export * from './authenticationExchangeCodeBadRequestResponseDtoError';
 export * from './authenticationExchangeCodeBadRequestResponseDtoErrorMessage';
 export * from './authenticationExchangeCodeResponseDto';
 export * from './authenticationExchangeCodeResponseDtoMeta';
-export * from './authenticationTokenDto';
 export * from './forbiddenResponseDto';
 export * from './forbiddenResponseDtoError';
 export * from './forbiddenResponseDtoErrorMessage';
